4.4.1
-----
1. Add 'dontTrapBack' URL query parameter. When passed Material will not
   intercept brower's back button.

4.4.0
-----
 1. Use detailed subtoolbar for some online (e.g Spotty) artist and album
    listings.
 2. Add server-side option to show composer, and not artist, for composer
    genres in MAI.
 3. In desktop layout with un-pinned queue add a show/hide queue button in
    bottom bar (if queue contains more than 1 track).
 4. For track style queue, show ratings on right underneath track time.
 5. Re-add zooming to MAI view.
 6. Get next alarm from status message (requires LMS8.5) and show in player
    menu, toolbar, and in 'Manage players' dialog.
 7. When re-show group volume dialog use any previous volumes as defaults, to
    improve initial display.
 8. Add release-type specific icons.
 9. When shrinking jumplist remove keys with fewest items.
10. Allow adding Bandcamp, Deezer, Qobuz, Spotify, and Tidal tracks to
    playlists.
11. Update Deezer icon.
12. Don't pass "sort:album" when adding an artist's albums to queue, as LMS
    errors on this (and "album" is the default sort anyway).
13. Remove mysqueezebox.com icon mapping.
14. Use LMS's time format to determine if 12 or 24hr times should be used.

4.3.4
-----
1. Try not to crop radio station logos in favourites.
2. Fix missing icons from 'Extras' plugins if Material is set as default skin.
3. Tweak queue toolbar layout.
4. Always restore queue pinned and shown state as per settings, regardless of
   window size.
5. Update Axios to 1.6.7

4.3.3
-----
1. When showing now-playing context menu reset favIcon and favUrl so that these
   are updated with current track.
2. Only show ratings actions if configured to show ratings.
3. Fix requesting extid (for emblems) and ratings in browse commands.
4. Tweak Tidal emblem.
5. Fix duplicated tech info in browse view when also showing ratings.
6. Update translations.
7. Fix listing all drive selectors in file/folder dialog for Windows.

4.3.2
-----